remove buttons in actions correct contacts link rename jump button

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ class: home
     <div class="Intro-actions">
       <a href="{{ site.baseurl }}#builds" class="Button">Video</a>
       <a href="{{ site.baseurl }}#waarom" class="Button">Waarom?</a>
-      <a href="{{ site.baseurl }}#mail" class="Button">Contact</a>
+      <a href="{{ site.baseurl }}#mail" class="Button">Social Info</a>
     </div>
   </div>
 </header>
