adding blog images adjust home_sponsors spacing correct G+ links

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ class: home
 ---
 <header class="Intro">
   <div class="Intro-brand">
-    <object data="img/taal_header.png">
+    <object data="img/taal_header2.png">
       <img src="img/fla_logo.png" alt="Taal" width="300px">
     </object>
     <!--<span class="animated fadeIn">
@@ -14,7 +14,7 @@ class: home
 
   <div class="animated fadeIn">
     
-    <h2>Voor al uw taalservices</h2>
+    <h2>Voor al uw Taalservices</h2>
     <p>Snel, accuraat & betrokken</p>
     <!--<div id="typed-strings">
         <p>^1000 indepe</p>
