adding facebook js

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ class: home
 
   <div class="animated fadeIn">
     
-    <h2>Voor al uw Taalservices</h2>
+    <h2>Voor al uw taalservices</h2>
     <p>Snel, accuraat & betrokken</p>
     <!--<div id="typed-strings">
         <p>^1000 indepe</p>
