wistia video dissapeared use youtube link

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ class: home
         <i class="fa fa-quote-left"></i><b>Mijn motto is: ik doe wat ik zeg en ik zeg wat ik doe</b> <i class="fa fa-quote-right"></i></code>
     </div>
     
-    <iframe src='https://fast.wistia.net/embed/iframe/od3608lg8g?version=v1&videoHeight=360&videoWidth=640' frameborder='0' webkitallowfullscreen mozallowfullscreen allowfullscreen name="Film"></iframe>
+    <iframe width="640" height="360" src="https://www.youtube.com/embed/qo4WUmB60mU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     
   </div>
 
