--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ class: home
     <br>
     Taalservice Limburg
     <div id="typed2-strings">
-        <p>^2500 <strong>vertaalt, reviseert & coacht</strong></p>
+        <p>^2500 <strong>vertaalt & coacht</strong></p>
     </div>
     <span id="typed2"></span>
 
