--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ class: home
     <div class="Intro-actions">
       <a href="{{ site.baseurl }}#coaching" class="Button">Lesgeven</a>
       <a href="{{ site.baseurl }}#vertalen" class="Button">Vertalen</a>
-      <a href="{{ site.baseurl }}#mail" class="Button">Social Media</a>
+      <a href="{{ site.baseurl }}#mail" class="Button">Sociale Media</a>
     </div>
   </div>
 </header>
