remove button & translate section youtube video link also removed

--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@ class: home
 
     <div class="Intro-actions">
       <a href="{{ site.baseurl }}#coaching" class="Button">Lesgeven</a>
-      <a href="{{ site.baseurl }}#vertalen" class="Button">Vertalen</a>
       <a href="{{ site.baseurl }}#mail" class="Button">Sociale Media</a>
     </div>
   </div>
@@ -55,7 +54,7 @@ class: home
 
   {% include coaching.html %}
   
-  {% include vertalen.html %}
+  <!--{% include vertalen.html %}-->
   
   {% include home_sponsors.html %}
 </div>
