adding CRKBO image floating left on home page & added to footer with link remove vertalen from diensten

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@ class: home
   <div class="animated fadeIn">
     
     <h2>Voor al uw taalprojecten</h2>
+    <div class="cert">
+      <img src="{{ site.baseurl }}/img/crkbo.jpg" alt="" width="200">
+    </div>
     <p>Efficiënt, accuraat & betrokken</p>
     <!--<div id="typed-strings">
         <p>^1000 indepe</p>
@@ -24,8 +27,8 @@ class: home
     <br>
     Taalservice Limburg voor
     <div id="typed2-strings">
-        <p>^1300 <strong>lesgeven & coachen</strong> ^1300</p>
-        <p><strong>vertalen</strong></p>
+        <p>^1300 <strong>lesgeven</strong> ^1300</p>
+        <p><strong>coachen</strong></p>
     </div>
     <span id="typed2"></span>
 
